Improvements to Offline Mode, Update system
Improvements to Offline Mode, Update system. Update system uses file
size not date stamps now. System is designed to be less blocking but is
still fairly intense on the OS.

--- a/public/application/css/main.css
+++ b/public/application/css/main.css
@@ -395,7 +395,7 @@ iframe .home header.header.clear {
 @media print,
 (-o-min-device-pixel-ratio: 5/4),
 (-webkit-min-device-pixel-ratio: 1.25),
-(min-resolution: 120dpi) {
+(min-resolution: 120dppx) {
     /* Style adjustments for high resolution devices */
 }
 /* ==========================================================================
