--- a/test/css/animation.css
+++ b/test/css/animation.css
@@ -45,10 +45,12 @@
 .p1.MONSTERZONE.i3     {top :250px; right:497px;}
 .p1.MONSTERZONE.i4     {top :250px; right:614px;}
 
-.card { -webkit-transform-style: preserve-3d; width:83px; height:124px; background:blue; position:absolute; -z-index: 3; -webkit-transition: all 500ms;}
+.card { -webkit-transform-style: preserve-3d; width:83px; height:124px; background:rgba(200,100,200,.2); position:absolute; -z-index: 3; -webkit-transition: all 500ms;}
 .card.deck { -webkit-transition: left 150ms;}
 
-
+.nocard {
+    display:none;
+}
 .card div {
     display: block;
   position: absolute;
