--- a/test/css/main.css
+++ b/test/css/main.css
@@ -359,7 +359,7 @@ header,
     padding: 160px 0;
     color: white;
     background: rgba(0, 0, 0, .65);
-    overflow: auto
+    overflow: auto;
 }
 section {
     width: 100%;
@@ -564,7 +564,12 @@ article {
     background: rgba(0, 0, 0, .65);
     -webkit-perspective: 1000px;
     position: relative;
-    -webkit-transform-style: preserve-3d
+    -webkit-transform-style: preserve-3d;
+    clear: both;
+    float: left;
+    overflow: hidden;
+    border-top: 3px solid #444;
+border-color: rgba(255,255,255,.05);
 }
 .fieldcontainer {
     width: 1000px;
@@ -724,11 +729,18 @@ article {
 }
 #phases {
     position: fixed;
-    top: 25%;
-    height: 50%;
-    width: 0;
+    bottom: 45px;
+    height: 50px;
+    width: 100%;
+    background: rgba(0, 0, 0, .5);
+    text-align: center;
 }
-.card {
+#phases div {
+    display: inline-block;
+    padding:1em;
+    color:white;
+}
+.undefined {
     display: none
 }
 .card.real {
