--- a/test/css/main.css
+++ b/test/css/main.css
@@ -615,15 +615,19 @@ article {
     margin: 0 auto;
 }
 .fieldimage {
-    width: 600;
-    height: 800;
-    -webkit-transform: rotate3d(1, 0, 0, 0deg);
-    margin: 0 auto;
-    background-image: url(../img/field.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-}
+width: 800px;
+height: 600px;
+-webkit-transform: rotate3d(1, 0, 0, 45deg);
+-webkit-perspective-origin: 0;
+margin: 0 auto;
+background-image: url(../img/field.png);
+background-size: 100% 100%;
+background-repeat: no-repeat;
+background-position: center;
+-webkit-transform-style: flat;
+-webkit-perspective: 1000px;
+-webkit-perspective-origin-x: 230px;
+-webkit-perspective-origin-y: 1000px;
 .button.ready0 {
     display: none;
 }
