--- a/test/css/main.css
+++ b/test/css/main.css
@@ -593,6 +593,7 @@ article {
     float: left;
     border-top: 3px solid #444;
     border-color: rgba(255, 255, 255, .05);
+    padding-top: 100px;
 }
 .fieldcontainer {
     width: 1000px;
@@ -628,6 +629,7 @@ background-position: center;
 -webkit-perspective: 1000px;
 -webkit-perspective-origin-x: 500px;
 -webkit-perspective-origin-y: 1000px;
+}
 .button.ready0 {
     display: none;
 }
@@ -758,7 +760,7 @@ background-position: center;
 }
 #phases {
     position: fixed;
-    bottom: 45px;
+    bottom: 35px;
     height: 50px;
     width: 100%;
     background: rgba(0, 0, 0, .5);
