--- a/test/css/main.css
+++ b/test/css/main.css
@@ -610,6 +610,21 @@ article {
     width: 198px;
     background: brown;
 }
+meter {
+float: left;
+margin: 0 5%;
+width: 40%;
+}
+
+#lifepoints input {
+text-align: center;
+float: left;
+background: transparent;
+color: white;
+border: none;
+margin: 10px 5%;
+width: 40%;
+}
 .gameplayarea {
     width: 750px;
     height: 750px;
