--- a/test/css/main.css
+++ b/test/css/main.css
@@ -384,9 +384,8 @@ aside {
     padding: 5px;
     text-align: center;
     margin: 0 auto;
-    width:30%;
+    width: 30%;
 }
-
 .featurelist li {
     list-style: none;
     display: inline-block;
@@ -418,22 +417,20 @@ aside {
 .lander-main ul {
     text-align: center;
     margin: 0 auto;
-
-    width:20%;
+    width: 20%;
 }
 .lander-main li {
-
     display: inline-block;
     text-shadow: 0 0 5px rgba(255, 255, 255, .2);
-    color:hotpink;
-    padding:5px;
-    margin:5px;
+    color: hotpink;
+    padding: 5px;
+    margin: 5px;
     font-size: .8em;
     display: inline-block;
 }
 .lander-main li:first-child {
     background: rgba(0, 0, 0, .2);
-    border:5px solid rgba(255, 200, 200, .2);
+    border: 5px solid rgba(255, 200, 200, .2);
 }
 article {
     width: 50%;
@@ -460,7 +457,7 @@ article {
     width: 100%;
     z-index: 10;
     border-top: 1px solid white;
-    font-size:.8em;
+    font-size: .8em;
 }
 .iconic {
     background: green;
@@ -611,39 +608,58 @@ article {
     background: brown;
 }
 meter {
+    float: left;
+    margin: 0 5%;
+    width: 25%;
+}
+#lifepoints {
+    width: 100%
+}
+#lifepoints input {
+    text-align: center;
+    float: left;
+    background: transparent;
+    color: white;
+    border: none;
+    margin: 10px 5%;
+    width: 25%;
+    clear:left;
+}
+#lifepoints .p1lp {
+    float: right;
+}
+#lifepoints {
+width: 1000px;
+margin: 10px auto;
+}
+.center {
+height: 35px;
+border: 2px dashed white;
+}
+.left, .right, .center {
 float: left;
-margin: 0 5%;
-width: 40%;
+width: 33%;
 }
 
-#lifepoints input {
-text-align: center;
-float: left;
-background: transparent;
-color: white;
-border: none;
-margin: 10px 5%;
-width: 40%;
-}
 .gameplayarea {
     width: 750px;
     height: 750px;
     margin: 0 auto;
 }
 .fieldimage {
-width: 800px;
-height: 600px;
--webkit-transform: rotate3d(1, 0, 0, 45deg);
--webkit-perspective-origin: 0;
-margin: 0 auto;
-background-image: url(../img/field.png);
-background-size: 100% 100%;
-background-repeat: no-repeat;
-background-position: center;
--webkit-transform-style: flat;
--webkit-perspective: 1000px;
--webkit-perspective-origin-x: 500px;
--webkit-perspective-origin-y: 1000px;
+    width: 800px;
+    height: 600px;
+    -webkit-transform: rotate3d(1, 0, 0, 45deg);
+    -webkit-perspective-origin: 0;
+    margin: 0 auto;
+    background-image: url(../img/field.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-transform-style: flat;
+    -webkit-perspective: 1000px;
+    -webkit-perspective-origin-x: 500px;
+    -webkit-perspective-origin-y: 1000px;
 }
 .button.ready0 {
     display: none;
@@ -776,17 +792,19 @@ background-position: center;
 #phases {
     position: fixed;
     bottom: 35px;
-    height: 50px;
+    height: 65px;
     width: 100%;
     background: rgba(0, 0, 0, .5);
     text-align: center;
     display: none;
 }
+/*
 #phases div {
     display: inline-block;
     padding: 1em;
     color: white;
 }
+*/
 .undefined {
     display: none
 }
