--- a/test/css/animation.css
+++ b/test/css/animation.css
@@ -1,4 +1,4 @@
-.card { -webkit-transform-style: preserve-3d; width:63px; height:86px; background:rgba(200,100,200,.2);
+.card,.overlayunit { -webkit-transform-style: preserve-3d; width:63px; height:86px; background:rgba(200,100,200,.2);
     position:absolute; -z-index: 3; -webkit-transition: all 500ms;
     z-index: 1;
 }
@@ -23,11 +23,11 @@
 .p0.SPELLZONE.i6     {bottom :108px; left:97px;}/*penzoneblue*/
 .p0.SPELLZONE.i7     {bottom :108px; left:633px;}/*penzonered*/
 
-.p0.MONSTERZONE.i0,.p0.OVERLAY.i0   {bottom :154px; left:190px;}
-.p0.MONSTERZONE.i1,.p0.OVERLAY.i1   {bottom :154px; left:276px;}
-.p0.MONSTERZONE.i2,.p0.OVERLAY.i2   {bottom :154px; left:360px;}
-.p0.MONSTERZONE.i3,.p0.OVERLAY.i3   {bottom :154px; left:453px;}
-.p0.MONSTERZONE.i4,.p0.OVERLAY.i4   {bottom :154px; left:541px;}
+.p0.MONSTERZONE.i0,.overlayunit.p0.i0   {bottom :154px; left:190px;}
+.p0.MONSTERZONE.i1,.overlayunit.p0.i1   {bottom :154px; left:276px;}
+.p0.MONSTERZONE.i2,.overlayunit.p0.i2   {bottom :154px; left:360px;}
+.p0.MONSTERZONE.i3,.overlayunit.p0.i3   {bottom :154px; left:453px;}
+.p0.MONSTERZONE.i4,.overlayunit.p0.i4   {bottom :154px; left:541px;}
 
 
 .p1.DECK         {top : 10px; right: 639px; }
@@ -45,11 +45,11 @@
 .p1.SPELLZONE.i6     {top :108px; right:106px;}/*penzoneblue*/
 .p1.SPELLZONE.i7     {top :108px; right:633px;}/*penzonered*/
 
-.p1.MONSTERZONE.i0,.p1.OVERLAY.i0     {top :154px; right:190px;}
-.p1.MONSTERZONE.i1,.p1.OVERLAY.i1     {top :154px; right:276px;}
-.p1.MONSTERZONE.i2,.p1.OVERLAY.i2     {top :154px; right:364px;}
-.p1.MONSTERZONE.i3,.p1.OVERLAY.i3     {top :154px; right:453px;}
-.p1.MONSTERZONE.i4,.p1.OVERLAY.i4     {top :154px; right:541px;}
+.p1.MONSTERZONE.i0,.overlayunit.p1.i0     {top :154px; right:190px;}
+.p1.MONSTERZONE.i1,.overlayunit.p1.i1     {top :154px; right:276px;}
+.p1.MONSTERZONE.i2,.overlayunit.p1.i2     {top :154px; right:364px;}
+.p1.MONSTERZONE.i3,.overlayunit.p1.i3     {top :154px; right:453px;}
+.p1.MONSTERZONE.i4,.overlayunit.p1.i4     {top :154px; right:541px;}
 
 
 .p0 [data-postition=FaceDownAttack],.p0 [data-position=FaceDown]  {-webkit-transform: rotate3d(0,0,0,0deg );
@@ -66,12 +66,12 @@
 .p1 [data-position=FaceUpDefence] { -webkit-transform: rotate(90deg ) rotate3d(0,0,1,180deg ); }
 .p1 [data-position=AttackFaceUp],.p1 [data-position=FaceUp]  {-webkit-transform: rotate3d(0,0,1,180deg ); }
 
-overlayunit.p0[data-overlayunit="0"] { -webkit-transform: translateX(3px)}
-overlayunit.p0[data-overlayunit="1"] { -webkit-transform: translateX(-3px)}
-overlayunit.p0[data-overlayunit="2"] { -webkit-transform: translateX(6px)}
+.overlayunit.p0[data-overlayunit="0"] { -webkit-transform: translateX(3px)}
+.overlayunit.p0[data-overlayunit="1"] { -webkit-transform: translateX(-3px)}
+.overlayunit.p0[data-overlayunit="2"] { -webkit-transform: translateX(6px)}
 
-overlayunit.p1[data-overlayunit="0"] { -webkit-transform: translateX(-3px)}
-overlayunit.p1[data-overlayunit="1"] { -webkit-transform: translateX(3px)}
-overlayunit.p1[data-overlayunit="3"] { -webkit-transform: translateX(-6px)}
+.overlayunit.p1[data-overlayunit="0"] { -webkit-transform: translateX(-3px)}
+.overlayunit.p1[data-overlayunit="1"] { -webkit-transform: translateX(3px)}
+.overlayunit.p1[data-overlayunit="3"] { -webkit-transform: translateX(-6px)}
 
 meter.p1lp {-webkit-transform: rotateY(180deg);}
