--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1063,7 +1063,7 @@ margin: 0 5%;
 @media only screen and (min-width: 35em) {}@media print,
 (-o-min-device-pixel-ratio: 5/4),
 (-webkit-min-device-pixel-ratio: 1.25),
-(min-resolution: 120dpi) {}
+(min-resolution: 120dppx) {}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
