--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -325,7 +325,7 @@ body {
     text-align: center;
 }
 h1 {
-    color: darkgrey;
+    color: white;
     font-size: 80px;
     margin: 0 auto;
     padding: 0;
@@ -342,8 +342,9 @@ h2 {
     maring: 0 auto;
     padding: 0;
     font-family: 'Poiret One', cursive;
-    text-shadow: 0 0 1px white;
+    text-shadow: 0 0 1px #777;
     font-weight: 200;
+    color:#aaa;
 }
 header,
 .game {
@@ -440,7 +441,7 @@ article {
 }
 .superfooter {
     background: black;
-    color: white;
+    color: #aaa;
     font-weight: 200;
     height: 3em;
     line-height: 3em;
