--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1067,6 +1067,10 @@ meter.p1time {
   display:none;
 }
 
+.in-iframe #versioninfo {position: absolute;
+top: 5px;
+left: 5px;
+display:block}
 /* =========================================
 =================================
    Media Queries
