--- a/client/interface/css/main.css
+++ b/client/interface/css/main.css
@@ -340,9 +340,10 @@ iframe .home header.header.clear {
     cursor: pointer;
     text-align: center;
     -webkit-app-region: no-drag;
-    border-left:1px solid black;
+    border:1px solid black;
     background: -webkit-linear-gradient(#fff, #aaa);
     box-shadow:0px 0px 2px white;
+    
     
 }
 #control div:first-child{
@@ -359,7 +360,6 @@ iframe .home header.header.clear {
 }
 #control div:nth-child(3){
     border-bottom-left-radius: 5px;   
-    border:none; 
 }
 
 #control {
@@ -373,9 +373,51 @@ iframe .home header.header.clear {
     color:white;
     z-index: 99999
 }
-
-    
+.roomstarted {
+    display: none;
 }
+#room-controls {
+    float: right;
+    width: 28%;
+    border: 1px solid white;
+    box-shadow: 0 0 50px black;
+    border-radius: 15px;
+    background: rgba(255, 255, 255, .5);
+    height: 250px;
+    height: 90%;
+}
+#gamefilter {
+    background: white;
+    width: 30vw;
+    font-size: 12px;
+    float: right;
+    padding: 5px;
+    height: 92vh;
+    padding-top: 28px;
+    border-left:1px solid black
+}
+#gamefilter label {
+    display: block;
+    width: 100%;
+    line-height: 1.5em;
+    padding: 0;
+    margin-top: 1vh;
+}
+#gamefilter label select,#gamefilter label input {
+    float:right;
+    display: block;
+    width:50%;
+}
+.incasing {
+padding: 5px;
+border: 1px solid silver;
+}
+#gamefilter button {
+    margin-top:20px;
+    display:inline-block;
+}
+    
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
