--- a/client/interface/css/main.css
+++ b/client/interface/css/main.css
@@ -416,7 +416,13 @@ border: 1px solid silver;
     margin-top:20px;
     display:inline-block;
 }
-    
+header a,header a:visited, header {
+color: inherit;
+text-decoration: none;
+}
+header a:hover {
+    color:pink;
+}
 
 /* ==========================================================================
    Helper classes
